<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_first_player_name_hint" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/total_score_a"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:text="@string/initial_score"
                        android:textSize="90sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/score_a_round_one"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:text="@string/initial_score"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/score_a_round_two"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:text="@string/initial_score"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/score_a_round_three"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:text="@string/initial_score"
                            android:textSize="30sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_second_player_name_hint" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/total_score_b"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:text="@string/initial_score"
                        android:textSize="90sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/score_b_round_one"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:text="@string/initial_score"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/score_b_round_two"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:text="@string/initial_score"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/score_b_round_three"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:text="@string/initial_score"
                            android:textSize="30sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/round_one_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/round_1" />

            <RadioButton
                android:id="@+id/round_two_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/round_2" />

            <RadioButton
                android:id="@+id/round_three_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/round_3" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/player_a_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/increase_score_by_one" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/player_b_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/increase_score_by_one" />
        </LinearLayout>

        <TextView
            android:id="@+id/game_result"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/reset_scoreboard" />

</RelativeLayout>